Fix more alignment and CSS syntax.

--- a/src/components/Auth/UserFormDialog/controls/controls.module.scss
+++ b/src/components/Auth/UserFormDialog/controls/controls.module.scss
@@ -40,11 +40,6 @@
     }
   }
 
-  > {
-    flex-grow: 0;
-    flex-shrink: 0;
-  }
-
   // align the delete button with the field next to it
   .deleteButtonContainer {
     height: 80px;
@@ -56,7 +51,7 @@
     padding-bottom: 0;
 
     &:first-child {
-      flex-basis: 90%;
+      flex: 1;
       margin-right: 8px;
     }
   }
